--- a/index.html
+++ b/index.html
@@ -167,7 +167,9 @@
             </div>
           </div>
           <span class="heart" data-aos="zoom-in"
-            ><i class="bi bi-arrow-through-heart" style="font-size: 2rem; color: white;"></i
+            ><i
+              class="bi bi-arrow-through-heart"
+              style="font-size: 2rem; color: white"></i
           ></span>
         </div>
       </div>
@@ -186,7 +188,7 @@
           <div class="col-lg-12 col-12 fade-in">
             <div class="card text-center text-bg-light mb-4">
               <div class="card-img">
-                <img src="bungabiru1.png" alt="" width="150px" />
+                <img src="cincin.png" alt="" width="100px" />
               </div>
               <div class="card-body">
                 <div class="row justify-content-center" data-aos="fade-up">
@@ -194,16 +196,37 @@
                     <h5>Jum'at | 26 Juni | 2026</h5>
                     <h4>Akad Nikah</h4>
                     <p><i class="bi bi-clock d-block"></i> 08.00 - 10.00 WIB</p>
-                    <img src="garis.png" alt="" width="300px" />
+                    <span class="alamat">Bertempat di</span>
+                    <p>Masjid Islamic Center</p>
+                    <span class="alamat">Bangkinang, Kab. Kampau, Riau</span
+                    ><br />
+                    <a
+                      href="https://maps.app.goo.gl/2BQobDEqpyqCNyjTA?g_st=iw"
+                      class="btn btn-light btn-sm my-4"
+                      >Lihat Maps</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card1 text-center text-bg-light mb-4">
+              <div class="card-img">
+                <img src="bungabiru1.png" alt="" width="100px" />
+              </div>
+              <div class="card-body">
+                <div class="row justify-content-center" data-aos="fade-up">
+                  <div class="col-md-6">
+                    <h5>Jum'at | 26 Juni | 2026</h5>
                     <h4>Resepsi</h4>
                     <p>
                       <i class="bi bi-clock d-block"></i> 10.00 WIB - selesai
                     </p>
                     <span class="alamat">Bertempat di</span>
-                    <p>Kediaman Mempelai Wanita</p>
-                    <span class="alamat">Pekanbaru</span><br />
+                    <p>Gedung Mahligai Bungsu</p>
+                    <span class="alamat">Bangkinang, Kab. Kampau, Riau</span
+                    ><br />
                     <a
-                      href="https://maps.app.goo.gl/GZuQyze1uSfD1aMb7"
+                      href="https://maps.app.goo.gl/FYrYeYvsMnyzHsh58?g_st=iw"
                       class="btn btn-light btn-sm my-4"
                       >Lihat Maps</a
                     >
@@ -425,7 +448,7 @@
     <script>
       // initialization of aos
       AOS.init({
-        duration: 2000,
+        duration: 1500,
         once: true,
         easing: "ease-in-out",
         offset: 120,
