--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
     <!-- GIFTS -->
     <section id="gifts" class="gifts" data-aos="fade-up">
       <div class="container">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center align-items-center">
           <div class="col-md-8 col-10 text-center">
             <h2 data-aos="fade-up">Doa untuk Pengantin</h2>
             <h3 data-aos="zoom-in">
